# toys

./: README.md
databases/key-value/cpp/: .gitignore  README.MD
html-parser/csharp/LD.Parsers.Html/: HtmlParser.cs
messaging-dotnet/: .gitignore  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LD.Messaging.slnx  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.CQRS-OBSERVABILITY.md  README.md  VERIFICATION_CHECKLIST.md  docker-compose.yml
messaging-dotnet/.claude/: settings.local.json
messaging-dotnet/adapter-tests/LD.Messaging.Adapter.Tests/: CheckedMonadTests.cs  LD.Messaging.Adapter.Tests.csproj  StockFileAdapterTests.cs  StockFileParserTests.cs
messaging-dotnet/adapter/LD.Messaging.Adapter/: IStockFileAdapter.cs  LD.Messaging.Adapter.csproj  StockFileAdapter.cs  StockFileParser.cs
messaging-dotnet/api/LD.Messaging.Api/: Dockerfile  LD.Messaging.Api.csproj  Program.cs  appsettings.json
messaging-dotnet/data-interfaces/LD.Messaging.Data.Interfaces/: LD.Messaging.Data.Interfaces.csproj
messaging-dotnet/domain/LD.Messaging.Domain/: Checked.cs  CheckedExtensions.cs  Class1.cs  Exchange.cs  StockMarketData.cs  StockRecord.cs
messaging-dotnet/file-service-benchmarks/LD.Messaging.FileService.Benchmarks/: Program.cs  (+1 more)
physics-engine/LeePhys/: CMakeLists.txt  LeePhys.cpp  LeePhys.h  LeeVector2d.h
physics-engine/LeePhys/CM/: Body.h
physics-engine/LeePhys/Core/: LeeVector2d.cpp  Vector2d.cpp  Vector2d.h  Velocity.cpp  Velocity.h
physics-engine/LeePhys/QM/: HilbertSpace.cpp  HilbertSpace.h
physics-simulations/: body.py  newton.py
(+81 files in other folders)
