# CMakeList.txt : CMake project for LeePhys, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("LeePhys")

# Add source to this project's executable.
add_executable (LeePhys "LeePhys.cpp" "LeePhys.h")

# TODO: Add tests and install targets if needed.
